# algorithms

./: .gitmodules  Makefile
arrays/merge-sorted-array/: merge-sorted-array.py
arrays/sorting/bubble-sort/: bubble-sort.c
arrays/sorting/insertion-sort/: insertion-sort.c
arrays/sorting/merge-sort/: merge-sort.c
euclid-gcd/: ReadMe.md  euclid-gcd.cpp
euclidean-gcd/: euclidean-gcd.cpp
math/least-common-multiple/: ReadMe.md  least-common-multiple.c
math/power/: power.c
src/: CMakeLists.txt  main.c
src/BubbleSort/: BubbleSort.c  BubbleSort.h  CMakeLists.txt  TestBubbleSort.c  TestBubbleSort.h
src/InsertionSort/: CMakeLists.txt  InsertionSort.c  InsertionSort.h  TestInsertionSort.c  TestInsertionSort.h
src/LeastCommonMultiple/: CMakeLists.txt  LeastCommonMultiple.c  LeastCommonMultiple.h  TestLeastCommonMultiple.c  TestLeastCommonMultiple.h
src/MergeSort/: CMakeLists.txt  MergeSort.c  MergeSort.h  TestMergeSort.c  TestMergeSort.h
src/TestLeastCommonMultiple/: CMakeLists.txt  MainSuccess.c
